<resources>
    <string name="splash_text">A Women Safety And Security Application</string>
    <string name="app_name">Raksha Kawatch</string>
    <string name="login_text">Fill your information below or \nregister with your social account</string>
    <string name="create">Create</string>
    <string name="account"> Account</string>
    <string name="password">Password</string>
    <string name="or_signup_with">or SignUp with</string>
    <string name="or_login_with">or_login_with</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_an_account">Create an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="emailTxt">Enter the email address associated \nwith your account</string>
    <string name="recover_pssword">Recover Pssword</string>
    <string name="emailVerificationTxt">Please enter the 4 digit code that \nsend to your email address</string>
    <string name="resend">Resend</string>
    <string name="emailVerificationTxt2">If you don\'t receive code.</string>
    <string name="recoverPasswordTxt">Your new password must be \ndiffrent for previously used password</string>
    <string name="verify_and_proceed">Verify and Proceed</string>
    <string name="todo">TODO</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="settings_privacy"><![CDATA[Settings & Privacy]]></string>
    <string name="manage_guardians">Manage Guardians</string>
    <string name="view_complaint">View Complaint</string>
    <string name="create_complaint">Create Complaint</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="sos_button">SOS Button</string>
    <string name="press_the_button_to_send_sos">Press the button to send SOS</string>
    <string name="quick_shortcuts">Quick Shortcuts</string>
    <string name="current_location">Current Location</string>
    <string name="back_button">Back Button</string>
    <string name="vanshika_saini">Vanshika Saini</string>
    <string name="hii">Hii,</string>
    <string name="username">Username</string>
    <string name="powerd_by_ujjaval_saini">Powerd By: Ujjaval Saini</string>
    <string name="get_instant_help_through_ai_powered_chatbot">Get instant help through AI-powered chatbot.</string>
    <string name="send">Send</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


</resources>