<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_splash"
    android:id="@+id/main"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/SplashImg"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="180dp"
        android:src="@drawable/gif_protection"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/img_app_logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="43sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_centerInParent="true"

        android:layout_below="@+id/SplashImg"
        android:gravity="center"/>
    <TextView
        android:id="@+id/runningTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_text"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_below="@id/appName"
        android:layout_marginTop="12dp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollHorizontally="true"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powerd_by_ujjaval_saini"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginEnd="10dp"/>


<!--    <TextView-->
<!--        android:id="@+id/runningTtx"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Safety and Security"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold|italic"-->
<!--        android:textColor="@color/white"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginBottom="6dp"-->
<!--        android:singleLine="true"-->
<!--        android:ellipsize="marquee"-->
<!--        android:marqueeRepeatLimit="marquee_forever"-->
<!--        android:focusable="true"-->
<!--        android:focusableInTouchMode="true"-->
<!--        android:scrollHorizontally="true"/>-->







</RelativeLayout>