<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_forgot_password"
    android:orientation="vertical"
    tools:context=".EmailVerificationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="27dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_arrow_back_ios_new_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Email Verification"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/black" />
    </LinearLayout>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="198dp"
        android:gravity="center"
        android:text="Get Your Code"
        android:textColor="#0359C2"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/emailVerificationTxt"
        android:textSize="20sp"
        android:textColor="@color/lightBlack"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="numberPassword"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:background="@drawable/otp_box"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="numberPassword"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:background="@drawable/otp_box"
            />

        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="numberPassword"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:background="@drawable/otp_box"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="numberPassword"
            android:gravity="center"
            android:textSize="18sp"
            android:background="@drawable/otp_box"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/emailVerificationTxt2"/>

        <TextView
            android:id="@+id/resendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="158dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/resend" />


    </RelativeLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="5dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomEnd="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recoverPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="10dp"
            android:text="@string/verify_and_proceed"
            android:textSize="23sp"
            android:gravity="center"/>





    </com.google.android.material.textfield.TextInputLayout>










</LinearLayout>